<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="369dp"
        android:layout_height="184dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/personPhoto"
                android:layout_width="216dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/contentDescrpElon"
                app:srcCompat="@drawable/elon_musk" />

            <TextView
                android:id="@+id/personName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/personPhoto"
                android:text="@string/nameForStory"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/personAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personName"
                android:layout_toEndOf="@+id/personPhoto"
                android:text="@string/ageForStory" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>